2011-01-28  David Bateman  <dbateman@free.fr>

	* arpack/src/cneupd.f (cneupd): Restore value of nconv if ctrsen
	returns a smaller value.
	* arpack/src/dneupd.f (dneupd): Likewise, for dtrsen.
	* arpack/src/sneupd.f (sneupd): Likewise, for strsen.
	* arpack/src/zneupd.f (zneupd): Likewise, for ztrsen.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* arpack/util/second.f (ARSCND): Declare ETIME INTRINSIC, not EXTERNAL.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* arpack: New directory.
	* Makefile.am: Include arpack/module.mk.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* mkf77def.in: Strip trailing whitespace.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* misc/cquit.c, misc/f77-fcn.h, misc/quit.cc: Strip trailing
	whitespace.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* Update copyright notices for 2011.

2010-09-07  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/cconv2.f, blas-xtra/csconv2.f, blas-xtra/dconv2.f,
	blas-xtra/sconv2.f, blas-xtra/zconv2.f, blas-xtra/zdconv2.f:
	Fix inner convolution formula.

2010-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* lapack-xtra/zrsf2csf.f, lapack-xtra/crsf2csf.f: New sources.
	* lapack-xtra/module.mk: Add them.

2010-05-04  John W. Eaton  <jwe@octave.org>

	* villad/dfopr.f, villad/dif.f, villad/intrp.f, villad/jcobi.f,
	villad/radau.f, villad/vilerr.f, villad/module.mk: Delete.
	* Makefile.am: Don't include villad/module.mk.

2010-04-11  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/cmatm3.f, blas-xtra/zmatm3.f,
	blas-xtra/dmatm3.f, blas-xtra/xsdot.f: Fix typos. Add missing
	decls.

2010-03-21  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_LIBADD): Include ../libgnu/libgnu.la
	in the list.  From Marco Atzeri <marco_atzeri@yahoo.it>.

2010-03-15  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_CPPFLAGS): Append $(AM_CPPFLAGS).

2010-03-03  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/cconv2.f, blas-xtra/csconv2.f, blas-xtra/dconv2.f,