@@ -1,43 +1,0 @@
-Rice BSD Software License
-
-Permits source and binary redistribution of the software ARPACK and
-P_ARPACK for both non-commercial and commercial use.
-
- Copyright (©) 2001, Rice University
- Developed by D.C. Sorensen, R.B. Lehoucq, C. Yang, and K. Maschhoff.
- All rights reserved.
-
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are
-met:
-
-o Redistributions of source code must retain the above copyright
-  notice, this list of conditions and the following disclaimer.
-
-o Redistributions in binary form must reproduce the above copyright
-  notice, this list of conditions and the following disclaimer in the
-  documentation and/or other materials provided with the distribution.
-
-o If you modify the source for these routines we ask that you change
-  the name of the routine and comment the changes made to the
-  original.
-
-o Written notification is provided to the developers of intent to use
-  this software.  Also, we ask that use of ARPACK is properly cited in
-  any resulting publications or software documentation.
-
-o Neither the name of Rice University (RICE) nor the names of its
-  contributors may be used to endorse or promote products derived from
-  this software without specific prior written permission.
-
-THIS SOFTWARE IS PROVIDED BY RICE AND CONTRIBUTORS "AS IS" AND ANY
-EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL RICE OR CONTRIBUTORS BE
-LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
-BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
-WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
-OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
-IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
